--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@ h1, h2, h3, h4, h5,p,span {
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  color: #2c3e50;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
@@ -184,7 +183,8 @@ body {
   text-align: right;
   font-size: 15px;
   line-height: 1.115;
-  color: rgba(45, 155, 240, .9);
+  color: #2c3e50;
+  font-weight: bold;
 }
 
 .chat-window__users {
@@ -239,4 +239,30 @@ body {
 
 .chat-window__add-room-button:active {
   background-color: #bebebe;
+}
+
+.auth-window__button:disabled {
+  background-color: #cfcfcf;
+  box-shadow: 0 0 5px #cfcfcf;
+}
+
+.chat-window__users-list {
+  padding-left: 0;
+}
+
+.chat-window__user-tall {
+  margin: 5px auto;
+  padding: 5px;
+  color: #2c3e50;;
+  list-style: none;
+  background-color: #ffffff;
+  font-size: 24px;
+  box-shadow: 0 0 2px #cfcfcf;
+  max-width: 200px;
+}
+
+.alert-chat__title {
+  font-size: 36px;
+  font-weight: normal;
+  margin: auto;
 }
